previewjob: fix thumbnails not saving to disk on windows

BUG: 463140